# github_broker

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  agents.yml  agents.yml.sample  agents_main.py  broker_main.py  broker_run.sh  check_assignable_issues.py  commit_message.txt  context.md  create_new_issue.py  edit_issue_body.py  fix_plans.py  get_issue_info.py  main.py  pyproject.toml  run.sh  run_e2e_test.sh  sample_agent.py
issue_creator_kit/: README.md  main.py  pyproject.toml
issue_creator_kit/application/: exceptions.py  issue_service.py  utils.py  validation_service.py
issue_creator_kit/docs/: README.md  data-model.md  file-discovery-and-hierarchy.md  usage.md  validation-rules.md
issue_creator_kit/docs/adr-017-workflow/: 1_workflow_activity_diagram.md  2_input_file_spec.md  3_implementation_notes.md  index.md
issue_creator_kit/domain/: document.py  issue.py
issue_creator_kit/interface/: validation_cli.py
issue_creator_kit/issue_creator_kit/application/: exceptions.py  issue_service.py  validation_service.py
issue_creator_kit/issue_creator_kit/domain/: document.py  issue.py
issue_creator_kit/issue_creator_kit/infrastructure/: file_system_service.py  github_service.py
issue_creator_kit/issue_creator_kit/interface/: cli.py  validation_cli.py
issue_creator_kit/reqs/adr/: 007-issue-quality-automation.md
issue_creator_kit/tests/application/: test_issue_service.py  test_validation_service.py  test_validation_service_full_rules.py
issue_creator_kit/tests/domain/: test_document.py  test_in_box_file_filter.py  test_issue.py
(+442 files in other folders)
