[project]
name = "issue_creator_kit"
version = "0.1.0"
description = "A kit for creating and managing GitHub issues."
authors = [{name = "masa-codehub", email = "masa@example.com"}]
dependencies = [
]

[project.scripts]
doc-validator = "issue_creator_kit.main:doc_validator_cli"
issue-creator = "issue_creator_kit.main:issue_creator_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
