# issue_creator_kitパッケージのプロジェクト設定
[project]
name = "issue_creator_kit"
version = "0.1.0"
description = "GitHub Issueの作成と管理のためのキット。"
authors = [{name = "masa-codehub"}] # メールアドレスは公開しないため削除
requires-python = ">=3.13" # ルートのpyproject.tomlと一貫性を持たせる
readme = "README.md" # パッケージのREADMEファイル
classifiers = [ # PyPIでの検索性を高めるための分類
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML",
    "PyGithub",
    "python-frontmatter"
]

# CLIエントリーポイントの定義
[project.scripts]
doc-validator = "issue_creator_kit.interface.validation_cli:main"
issue-creator = "issue_creator_kit.interface.cli:main"


# ビルドシステムの設定
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["issue_creator_kit"]
